--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 
 # next.js
 /.next/
@@ -18,6 +18,7 @@ yarn-error.log*
 
 # env files
 .env*
+!server/.env.example
 
 # vercel
 .vercel
@@ -25,3 +26,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# server
+server/dist
